double quotes and PhraseSearcher remove list.of